src/html/snapshots/textsurfer__html__parser__tests__parse_doctype_system.snap
---
source: src/html/parser.rs
expression: "document_dump(\"<!DOCTYPE html SYSTEM \\\"about:legacy-compat\\\"><p>x</p>\")"
---
#document
| <!DOCTYPE html "" "about:legacy-compat">
| <html>
|   <head>
|   <body>
|     <p>
|       "x"
