src/html/snapshots/textsurfer__html__parser__tests__parse_entities.snap
---
source: src/html/parser.rs
expression: "document_dump(\"<p>&amp;&#65;&#x42;&auml;</p>\")"
---
#document
| <html>
|   <head>
|   <body>
|     <p>
|       "&ABä"
