src/html/snapshots/textsurfer__html__parser__tests__parse_foster_table.snap
---
source: src/html/parser.rs
expression: "document_dump(\"<table><b><tr><td>aaa</td></tr>bbb</table>ccc\")"
---
#document
| <html>
|   <head>
|   <body>
|     <b>
|     <b>
|       "bbb"
|     <table>
|       <tbody>
|         <tr>
|           <td>
|             "aaa"
|     <b>
|       "ccc"
