src/html/snapshots/textsurfer__html__parser__tests__parse_fragment_foreign.snap
---
source: src/html/parser.rs
expression: "fragment_dump(\"<path d=\\\"\\\"/><div>x</div>\", \"svg\", ElementNs::Svg)"
---
| <svg path>
|   d=""
| <div>
|   "x"
