src/html/snapshots/textsurfer__html__parser__tests__parse_fragment_template.snap
---
source: src/html/parser.rs
expression: "fragment_dump(\"<div>Hi</div><td>x</td>\", \"template\", ElementNs::Html)"
---
| <div>
|   "Hi"
| "x"
