src/html/snapshots/textsurfer__html__parser__tests__parse_li.snap
---
source: src/html/parser.rs
expression: "document_dump(\"<ul><li>a<li>b</ul>\")"
---
#document
| <html>
|   <head>
|   <body>
|     <ul>
|       <li>
|         "a"
|       <li>
|         "b"
