src/html/snapshots/textsurfer__html__parser__tests__parse_pi.snap
---
source: src/html/parser.rs
expression: "document_dump(\"<?target data?><div>x</div>\")"
---
#document
| <!-- ?target data? -->
| <html>
|   <head>
|   <body>
|     <div>
|       "x"
